--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
-                    <p><span>$64.00 </span>$66.00</p>
+                    <p><span>$64.00 </span></p>
                 </div>
             </div>
             <div class="content">
@@ -121,7 +121,7 @@
                 </div>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
-                    <p><span>$64.00 </span>$66.00</p>
+                    <p><span>$64.00 </span></p>
                 </div>
             </div>
             <div class="content">
@@ -153,7 +153,7 @@
                 </div>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
-                    <p><span>$64.00 </span>$66.00</p>
+                    <p><span>$64.00 </span></p>
                 </div>
             </div>
             <div class="content">
@@ -196,9 +196,13 @@
                 </div>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
-                    <p><span>$64.00 </span>$66.00</p>
+                    <p><span>$64.00 </span></p>
                 </div>
             </div>
+        </div>
+
+        <div class="footClass">
+            <img src="src/images_p1/pexels-photo-3746212.jpeg" alt=""> 
         </div>
 
     </div>
